--- a/test/nonconvex/Test Nonconvex 10-10.ipynb
+++ b/test/nonconvex/Test Nonconvex 10-10.ipynb
@@ -5922,7 +5922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "9f5bfabd-ec13-446b-92de-64470c6e6c26",
    "metadata": {},
    "outputs": [
@@ -5939,14 +5939,16 @@
       "50%    -0.316696          0.000000      2.655058\n",
       "75%    -0.078003          0.000000      3.411582\n",
       "max     1.706401          4.023182     59.945528\n",
-      "Number of infeasible solution: 5\n"
+      "Number of infeasible solution: 2\n",
+      "Number of None values:  3\n"
      ]
     }
    ],
    "source": [
     "df = pd.read_csv(\"result/nc_exact_10-10.csv\", index_col=0).iloc[:100]\n",
     "print(df.describe())\n",
-    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)+df[\"Sol\"].isna().sum()))"
+    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
+    "print(\"Number of None values: \", df[\"Sol\"].isna().sum())"
    ]
   },
   {
@@ -6041,7 +6043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "98d0c92c-adb4-4ebe-b3f4-e5916c80ffcb",
    "metadata": {},
    "outputs": [
@@ -6058,14 +6060,16 @@
       "50%     -0.319403          0.127978      0.909706\n",
       "75%     -0.100397          0.216225      1.015680\n",
       "max      1.632131          0.484200     60.218013\n",
-      "Number of infeasible solution: 87\n"
+      "Number of infeasible solution: 87\n",
+      "Number of None values:  0\n"
      ]
     }
    ],
    "source": [
     "df = pd.read_csv(\"result/nc_heur_rnd_10-10.csv\", index_col=0).iloc[:100]\n",
     "print(df.describe())\n",
-    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)+df[\"Sol\"].isna().sum()))"
+    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
+    "print(\"Number of None values: \", df[\"Sol\"].isna().sum())"
    ]
   },
   {
@@ -7889,7 +7893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "614db061-abbe-4b6b-8f41-dda2c358deae",
    "metadata": {},
    "outputs": [
@@ -7906,14 +7910,16 @@
       "50%      0.370687          0.000000      0.122201\n",
       "75%      3.289588          0.000000      0.268598\n",
       "max    241.369778          2.982027     60.316354\n",
-      "Number of infeasible solution: 4\n"
+      "Number of infeasible solution: 2\n",
+      "Number of None values:  2\n"
      ]
     }
    ],
    "source": [
     "df = pd.read_csv(\"result/nc_heur_n1_10-10.csv\", index_col=0).iloc[:100]\n",
     "print(df.describe())\n",
-    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)+df[\"Sol\"].isna().sum()))"
+    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
+    "print(\"Number of None values: \", df[\"Sol\"].isna().sum())"
    ]
   },
   {
@@ -7926,7 +7932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "6a4fb3e2-9c47-4c10-8116-e94be18ea59c",
    "metadata": {},
    "outputs": [],
@@ -7939,7 +7945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "536d2d58-67ba-408a-b72a-7c5bd54a5ff4",
    "metadata": {},
    "outputs": [],
@@ -7954,7 +7960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "fee1241e-e53a-4cbb-927a-edcdb3537303",
    "metadata": {},
    "outputs": [],
@@ -7980,7 +7986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "e4f10263-5f69-4288-a4e8-8be83929c8d6",
    "metadata": {},
    "outputs": [
@@ -8091,7 +8097,8 @@
       "Epoch 100, Validation Loss: 1.16\n",
       "Early stopping at epoch 100\n",
       "Best model loaded.\n",
-      "Training complete.\n"
+      "Training complete.\n",
+      "The training time is 144.46 sec.\n"
      ]
     }
    ],
@@ -8110,7 +8117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "3e835084-eb75-45d9-bcbd-5fb4c613fb41",
    "metadata": {},
    "outputs": [
@@ -8118,29 +8125,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:04<00:00, 221.41it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████| 100/100 [00:00<00:00, 227.99it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  1000.000000       1000.000000   1000.000000\n",
-      "mean      0.920736          0.000948      0.002960\n",
-      "std       0.609609          0.008151      0.001443\n",
-      "min       0.147438          0.000000      0.000997\n",
-      "25%       0.461976          0.000000      0.002000\n",
-      "50%       0.729616          0.000000      0.002512\n",
-      "75%       1.151021          0.000000      0.003011\n",
-      "max       3.899173          0.126378      0.012021\n",
-      "Number of infeasible solution: 24\n"
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000        100.000000    100.000000\n",
+      "mean     0.987660          0.000328      0.002755\n",
+      "std      0.726339          0.003058      0.000686\n",
+      "min      0.188000          0.000000      0.000999\n",
+      "25%      0.474683          0.000000      0.002223\n",
+      "50%      0.676017          0.000000      0.002558\n",
+      "75%      1.240204          0.000000      0.003318\n",
+      "max      3.899173          0.030524      0.004737\n",
+      "Number of infeasible solution: 2\n"
      ]
     }
    ],
    "source": [
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
-    "for b in tqdm(data_test.datadict[\"b\"]):\n",
+    "for b in tqdm(data_test.datadict[\"b\"][:100]):\n",
     "    # data point as tensor\n",
     "    datapoints = {\"b\": torch.unsqueeze(b, 0).to(\"cuda\"), \n",
     "                  \"name\": \"test\"}\n",
@@ -8172,35 +8179,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "acd95199-2603-45d4-93e4-241fd9675ef7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "          Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  100.000000        100.000000    100.000000\n",
-      "mean     0.987660          0.000328      0.002967\n",
-      "std      0.726339          0.003058      0.001384\n",
-      "min      0.188000          0.000000      0.001007\n",
-      "25%      0.474683          0.000000      0.002001\n",
-      "50%      0.676017          0.000000      0.002512\n",
-      "75%      1.240204          0.000000      0.003359\n",
-      "max      3.899173          0.030524      0.007515\n",
-      "Number of infeasible solution: 2\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = pd.read_csv(\"result/nc_lr_10-10.csv\", index_col=0).iloc[:100]\n",
-    "print(df.describe())\n",
-    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)+df[\"Sol\"].isna().sum()))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "2dbf8a72-29b9-49c4-b3c1-0d68895c1c1f",
    "metadata": {},
@@ -8210,7 +8188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "36c57dbb-8dee-4976-8922-82a155fe0128",
    "metadata": {},
    "outputs": [],
@@ -8223,7 +8201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "d46b9817-87ac-4af0-b387-b10c9a4998f4",
    "metadata": {},
    "outputs": [],
@@ -8238,7 +8216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "fa8b147f-39c8-4eb7-bb95-93dd8e4cb1cf",
    "metadata": {},
    "outputs": [],
@@ -8264,7 +8242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "c6f5bb17-8c3c-4dcd-952d-caa1d7c4c4fa",
    "metadata": {},
    "outputs": [
@@ -8451,7 +8429,8 @@
       "Epoch 176, Validation Loss: 0.73\n",
       "Early stopping at epoch 176\n",
       "Best model loaded.\n",
-      "Training complete.\n"
+      "Training complete.\n",
+      "The training time is 260.34 sec.\n"
      ]
     }
    ],
@@ -8470,7 +8449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "6584d57e-6b4c-4262-82f5-55735ef17cac",
    "metadata": {},
    "outputs": [
@@ -8478,29 +8457,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:04<00:00, 229.24it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████| 100/100 [00:00<00:00, 240.97it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  1000.000000       1000.000000   1000.000000\n",
-      "mean      0.557996          0.000702      0.002831\n",
-      "std       0.567562          0.006450      0.001462\n",
-      "min      -0.123012          0.000000      0.001001\n",
-      "25%       0.156289          0.000000      0.002031\n",
-      "50%       0.399342          0.000000      0.002292\n",
-      "75%       0.744155          0.000000      0.003100\n",
-      "max       3.367784          0.142946      0.013700\n",
-      "Number of infeasible solution: 23\n"
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000        100.000000    100.000000\n",
+      "mean     0.604957          0.001031      0.002666\n",
+      "std      0.673139          0.006592      0.001106\n",
+      "min     -0.123012          0.000000      0.001000\n",
+      "25%      0.149922          0.000000      0.002000\n",
+      "50%      0.348691          0.000000      0.002010\n",
+      "75%      0.866499          0.000000      0.003000\n",
+      "max      3.367784          0.058074      0.005542\n",
+      "Number of infeasible solution: 3\n"
      ]
     }
    ],
    "source": [
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
-    "for b in tqdm(data_test.datadict[\"b\"]):\n",
+    "for b in tqdm(data_test.datadict[\"b\"][:100]):\n",
     "    # data point as tensor\n",
     "    datapoints = {\"b\": torch.unsqueeze(b, 0).to(\"cuda\"), \n",
     "                  \"name\": \"test\"}\n",
@@ -8532,35 +8511,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "9a92a2a0-6ed4-4766-90c0-6eb7d379a03a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "          Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  100.000000        100.000000    100.000000\n",
-      "mean     0.604957          0.001031      0.003586\n",
-      "std      0.673139          0.006592      0.001777\n",
-      "min     -0.123012          0.000000      0.001265\n",
-      "25%      0.149922          0.000000      0.002156\n",
-      "50%      0.348691          0.000000      0.003095\n",
-      "75%      0.866499          0.000000      0.004134\n",
-      "max      3.367784          0.058074      0.009619\n",
-      "Number of infeasible solution: 3\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = pd.read_csv(\"result/nc_lt_10-10.csv\", index_col=0).iloc[:100]\n",
-    "print(df.describe())\n",
-    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)+df[\"Sol\"].isna().sum()))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "e6effb71-6b88-4a89-85b0-ca85e959c7ae",
    "metadata": {},
@@ -8570,7 +8520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "id": "382a0a8a-d846-4182-ab69-7d618edea9cf",
    "metadata": {},
    "outputs": [],
@@ -8583,7 +8533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "id": "f5047221-d573-488f-9874-ff79d14e0cbe",
    "metadata": {},
    "outputs": [],
@@ -8597,7 +8547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "id": "f8346c21-533f-4b8c-9ad3-cf60c2f0049d",
    "metadata": {},
    "outputs": [],
@@ -8618,7 +8568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "id": "30a68be5-626c-45a7-9c06-c5907c0c664c",
    "metadata": {},
    "outputs": [
@@ -8746,7 +8696,7 @@
       "Early stopping at epoch 116\n",
       "Best model loaded.\n",
       "Training complete.\n",
-      "The training time is 68.86 sec.\n"
+      "The training time is 75.67 sec.\n"
      ]
     }
    ],
@@ -8765,7 +8715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "id": "5770db3d-e5a6-49ea-ac19-5c766b6f56ce",
    "metadata": {},
    "outputs": [
@@ -8773,30 +8723,30 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:02<00:00, 426.05it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████| 100/100 [00:00<00:00, 252.45it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  1000.000000       1000.000000   1000.000000\n",
-      "mean      3.140313          0.079601      0.000618\n",
-      "std       0.679695          0.057805      0.000527\n",
-      "min       2.023813          0.000000      0.000000\n",
-      "25%       2.694338          0.037228      0.000000\n",
-      "50%       2.993297          0.070248      0.000998\n",
-      "75%       3.404727          0.109723      0.001000\n",
-      "max       6.776588          0.335568      0.002511\n",
-      "Number of infeasible solution: 938\n"
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000        100.000000    100.000000\n",
+      "mean     3.281654          0.078485      0.000926\n",
+      "std      0.776403          0.057827      0.000504\n",
+      "min      2.135813          0.000000      0.000000\n",
+      "25%      2.826485          0.032311      0.000999\n",
+      "50%      3.078832          0.069870      0.001000\n",
+      "75%      3.507419          0.111662      0.001010\n",
+      "max      6.776588          0.262004      0.002021\n",
+      "Number of infeasible solution: 93\n"
      ]
     }
    ],
    "source": [
     "from src.heuristic import naive_round\n",
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
-    "for b in tqdm(data_test.datadict[\"b\"]):\n",
+    "for b in tqdm(data_test.datadict[\"b\"][:100]):\n",
     "    # data point as tensor\n",
     "    datapoints = {\"b\": torch.unsqueeze(b, 0).to(\"cuda\"), \n",
     "                  \"name\": \"test\"}\n",
@@ -8826,35 +8776,6 @@
     "print(df.describe())\n",
     "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
     "df.to_csv(\"result/nc_pr_10-10.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "ee87c055-d2e6-43b9-a006-705574d6ad62",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "          Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  100.000000        100.000000    100.000000\n",
-      "mean     3.281654          0.078485      0.000602\n",
-      "std      0.776403          0.057827      0.000516\n",
-      "min      2.135813          0.000000      0.000000\n",
-      "25%      2.826485          0.032311      0.000000\n",
-      "50%      3.078832          0.069870      0.000998\n",
-      "75%      3.507419          0.111662      0.001001\n",
-      "max      6.776588          0.262004      0.002000\n",
-      "Number of infeasible solution: 93\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = pd.read_csv(\"result/nc_pr_10-10.csv\", index_col=0).iloc[:100]\n",
-    "print(df.describe())\n",
-    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))"
    ]
   },
   {
