--- a/test/nonconvex/Test Nonconvex 100-100.ipynb
+++ b/test/nonconvex/Test Nonconvex 100-100.ipynb
@@ -6963,7 +6963,8 @@
       "Epoch 82, Validation Loss: 2.92\n",
       "Early stopping at epoch 82\n",
       "Best model loaded.\n",
-      "Training complete.\n"
+      "Training complete.\n",
+      "The training time is 136.01 sec.\n"
      ]
     }
    ],
@@ -6990,29 +6991,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:41<00:00, 23.93it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [00:04<00:00, 23.11it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  1000.000000       1000.000000   1000.000000\n",
-      "mean      0.966917          0.000345      0.004407\n",
-      "std       0.086643          0.003334      0.001971\n",
-      "min       0.897948          0.000000      0.001940\n",
-      "25%       0.928231          0.000000      0.003059\n",
-      "50%       0.928231          0.000000      0.003779\n",
-      "75%       0.949317          0.000000      0.005115\n",
-      "max       1.669097          0.066932      0.016053\n",
-      "Number of infeasible solution: 16\n"
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000        100.000000    100.000000\n",
+      "mean     0.974443          0.000321      0.003584\n",
+      "std      0.090307          0.003211      0.001102\n",
+      "min      0.926433          0.000000      0.001999\n",
+      "25%      0.928231          0.000000      0.002998\n",
+      "50%      0.928231          0.000000      0.003416\n",
+      "75%      1.028227          0.000000      0.004227\n",
+      "max      1.438176          0.032107      0.007854\n",
+      "Number of infeasible solution: 1\n"
      ]
     }
    ],
    "source": [
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
-    "for b in tqdm(data_test.datadict[\"b\"]):\n",
+    "for b in tqdm(data_test.datadict[\"b\"][:100]):\n",
     "    # data point as tensor\n",
     "    datapoints = {\"b\": torch.unsqueeze(b, 0).to(\"cuda\"), \n",
     "                  \"name\": \"test\"}\n",
@@ -7188,7 +7189,8 @@
       "Epoch 70, Validation Loss: 1.90\n",
       "Early stopping at epoch 70\n",
       "Best model loaded.\n",
-      "Training complete.\n"
+      "Training complete.\n",
+      "The training time is 111.38 sec.\n"
      ]
     }
    ],
@@ -7215,29 +7217,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:38<00:00, 26.27it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [00:03<00:00, 28.59it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  1000.000000       1000.000000   1000.000000\n",
-      "mean      1.044368          0.000676      0.004357\n",
-      "std       0.159449          0.006931      0.001975\n",
-      "min       0.910039          0.000000      0.001435\n",
-      "25%       0.983249          0.000000      0.003043\n",
-      "50%       1.030809          0.000000      0.003543\n",
-      "75%       1.075741          0.000000      0.005360\n",
-      "max       3.638972          0.122583      0.012884\n",
-      "Number of infeasible solution: 15\n"
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000        100.000000    100.000000\n",
+      "mean     1.037863          0.000355      0.003222\n",
+      "std      0.108651          0.003553      0.000864\n",
+      "min      0.929790          0.000000      0.001995\n",
+      "25%      0.980396          0.000000      0.002616\n",
+      "50%      1.014233          0.000000      0.003056\n",
+      "75%      1.073323          0.000000      0.003606\n",
+      "max      1.936775          0.035534      0.006984\n",
+      "Number of infeasible solution: 1\n"
      ]
     }
    ],
    "source": [
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
-    "for b in tqdm(data_test.datadict[\"b\"]):\n",
+    "for b in tqdm(data_test.datadict[\"b\"][:100]):\n",
     "    # data point as tensor\n",
     "    datapoints = {\"b\": torch.unsqueeze(b, 0).to(\"cuda\"), \n",
     "                  \"name\": \"test\"}\n",
@@ -7278,7 +7280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "382a0a8a-d846-4182-ab69-7d618edea9cf",
    "metadata": {},
    "outputs": [],
@@ -7291,7 +7293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "id": "bc2552ca-d994-42f3-8422-3c0c60f5da3a",
    "metadata": {},
    "outputs": [],
@@ -7305,7 +7307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "id": "252893b5-bdc6-4733-a5b6-ae8fd714f69e",
    "metadata": {},
    "outputs": [],
@@ -7326,7 +7328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "33d3f141-209a-443f-a3cd-94793c22aaa2",
    "metadata": {},
    "outputs": [
@@ -7471,7 +7473,7 @@
       "Early stopping at epoch 133\n",
       "Best model loaded.\n",
       "Training complete.\n",
-      "The training time is 89.62 sec.\n"
+      "The training time is 81.43 sec.\n"
      ]
     }
    ],
@@ -7490,7 +7492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "id": "3e6a41fb-5dda-495f-a35e-2228f57f87da",
    "metadata": {},
    "outputs": [
@@ -7498,30 +7500,30 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:36<00:00, 27.32it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [00:04<00:00, 22.40it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  1000.000000       1000.000000   1000.000000\n",
-      "mean     19.727165          0.227007      0.000755\n",
-      "std       0.572038          0.237478      0.000531\n",
-      "min      18.014832          0.000000      0.000000\n",
-      "25%      19.357881          0.028647      0.000000\n",
-      "50%      19.699750          0.156766      0.001000\n",
-      "75%      20.046595          0.355445      0.001005\n",
-      "max      22.329344          1.382907      0.002513\n",
-      "Number of infeasible solution: 796\n"
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000        100.000000    100.000000\n",
+      "mean    19.652664          0.201050      0.000987\n",
+      "std      0.588402          0.262282      0.000514\n",
+      "min     18.553989          0.000000      0.000000\n",
+      "25%     19.225016          0.006625      0.000999\n",
+      "50%     19.591134          0.098692      0.001001\n",
+      "75%     20.058785          0.287999      0.001082\n",
+      "max     21.196766          1.256986      0.002561\n",
+      "Number of infeasible solution: 78\n"
      ]
     }
    ],
    "source": [
     "from src.heuristic import naive_round\n",
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
-    "for b in tqdm(data_test.datadict[\"b\"]):\n",
+    "for b in tqdm(data_test.datadict[\"b\"][:100]):\n",
     "    # data point as tensor\n",
     "    datapoints = {\"b\": torch.unsqueeze(b, 0).to(\"cuda\"), \n",
     "                  \"name\": \"test\"}\n",
@@ -7551,35 +7553,6 @@
     "print(df.describe())\n",
     "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
     "df.to_csv(\"result/nc_pr_100-100.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "0f6f6647-39e2-44eb-a8cb-73e8e8df2214",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "          Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  100.000000        100.000000    100.000000\n",
-      "mean    19.652664          0.201050      0.000722\n",
-      "std      0.588402          0.262282      0.000530\n",
-      "min     18.553989          0.000000      0.000000\n",
-      "25%     19.225016          0.006625      0.000000\n",
-      "50%     19.591134          0.098692      0.001000\n",
-      "75%     20.058785          0.287999      0.001005\n",
-      "max     21.196766          1.256986      0.002364\n",
-      "Number of infeasible solution: 78\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = pd.read_csv(\"result/nc_pr_100-100.csv\", index_col=0).iloc[:100]\n",
-    "print(df.describe())\n",
-    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))"
    ]
   },
   {
