--- a/test/nonconvex/Test Nonconvex 20-20.ipynb
+++ b/test/nonconvex/Test Nonconvex 20-20.ipynb
@@ -11295,7 +11295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "b31ec4ee-7bea-4211-93c9-173b2db7c020",
    "metadata": {},
    "outputs": [
@@ -11312,14 +11312,16 @@
       "50%     0.288025          0.000000      2.488984\n",
       "75%     2.632359          0.000000     59.744098\n",
       "max    20.413122          1.923506     60.557546\n",
-      "Number of infeasible solution: 75\n"
+      "Number of infeasible solution: 2\n",
+      "Number of None values:  73\n"
      ]
     }
    ],
    "source": [
     "df = pd.read_csv(\"result/nc_exact_20-20.csv\", index_col=0).iloc[:100]\n",
     "print(df.describe())\n",
-    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)+df[\"Sol\"].isna().sum()))"
+    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
+    "print(\"Number of None values: \", df[\"Sol\"].isna().sum())"
    ]
   },
   {
@@ -13917,7 +13919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "81e0e91a-46a2-4260-904f-717ab4bece15",
    "metadata": {},
    "outputs": [
@@ -13934,14 +13936,16 @@
       "50%       0.947668          0.000000      0.169340\n",
       "75%       4.009457          0.000000      0.191995\n",
       "max    2430.918653          3.919692     60.329085\n",
-      "Number of infeasible solution: 2\n"
+      "Number of infeasible solution: 2\n",
+      "Number of None values:  1\n"
      ]
     }
    ],
    "source": [
     "df = pd.read_csv(\"result/nc_heur_n1_20-20.csv\", index_col=0).iloc[:100]\n",
     "print(df.describe())\n",
-    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)+df[\"Sol\"].isna().sum()))"
+    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
+    "print(\"Number of None values: \", df[\"Sol\"].isna().sum())"
    ]
   },
   {
@@ -13954,7 +13958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "6a4fb3e2-9c47-4c10-8116-e94be18ea59c",
    "metadata": {},
    "outputs": [],
@@ -13967,7 +13971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "536d2d58-67ba-408a-b72a-7c5bd54a5ff4",
    "metadata": {},
    "outputs": [],
@@ -13982,7 +13986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "fee1241e-e53a-4cbb-927a-edcdb3537303",
    "metadata": {},
    "outputs": [],
@@ -14008,7 +14012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "e4f10263-5f69-4288-a4e8-8be83929c8d6",
    "metadata": {},
    "outputs": [
@@ -14128,7 +14132,8 @@
       "Epoch 109, Validation Loss: 0.43\n",
       "Early stopping at epoch 109\n",
       "Best model loaded.\n",
-      "Training complete.\n"
+      "Training complete.\n",
+      "The training time is 173.02 sec.\n"
      ]
     }
    ],
@@ -14147,7 +14152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "3e835084-eb75-45d9-bcbd-5fb4c613fb41",
    "metadata": {},
    "outputs": [
@@ -14155,29 +14160,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:07<00:00, 130.58it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████| 100/100 [00:00<00:00, 124.84it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  1000.000000       1000.000000   1000.000000\n",
-      "mean      0.385840          0.000175      0.003680\n",
-      "std       0.120253          0.004202      0.001829\n",
-      "min       0.122742          0.000000      0.000998\n",
-      "25%       0.301175          0.000000      0.002513\n",
-      "50%       0.380554          0.000000      0.003024\n",
-      "75%       0.461874          0.000000      0.004324\n",
-      "max       0.802535          0.123495      0.013870\n",
-      "Number of infeasible solution: 3\n"
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000        100.000000    100.000000\n",
+      "mean     0.397431          0.000022      0.003525\n",
+      "std      0.119622          0.000223      0.000854\n",
+      "min      0.178874          0.000000      0.001997\n",
+      "25%      0.321162          0.000000      0.003000\n",
+      "50%      0.384433          0.000000      0.003526\n",
+      "75%      0.461228          0.000000      0.004012\n",
+      "max      0.802535          0.002229      0.005953\n",
+      "Number of infeasible solution: 1\n"
      ]
     }
    ],
    "source": [
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
-    "for b in tqdm(data_test.datadict[\"b\"]):\n",
+    "for b in tqdm(data_test.datadict[\"b\"][:100]):\n",
     "    # data point as tensor\n",
     "    datapoints = {\"b\": torch.unsqueeze(b, 0).to(\"cuda\"), \n",
     "                  \"name\": \"test\"}\n",
@@ -14209,35 +14214,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "e4bd8e1d-1588-46ac-bb8e-57c6d372db35",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "          Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  100.000000        100.000000    100.000000\n",
-      "mean     0.397431          0.000022      0.003723\n",
-      "std      0.119622          0.000223      0.001413\n",
-      "min      0.178874          0.000000      0.001794\n",
-      "25%      0.321162          0.000000      0.002999\n",
-      "50%      0.384433          0.000000      0.003383\n",
-      "75%      0.461228          0.000000      0.004176\n",
-      "max      0.802535          0.002229      0.009059\n",
-      "Number of infeasible solution: 1\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = pd.read_csv(\"result/nc_lr_20-20.csv\", index_col=0).iloc[:100]\n",
-    "print(df.describe())\n",
-    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)+df[\"Sol\"].isna().sum()))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "2dbf8a72-29b9-49c4-b3c1-0d68895c1c1f",
    "metadata": {},
@@ -14247,7 +14223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "36c57dbb-8dee-4976-8922-82a155fe0128",
    "metadata": {},
    "outputs": [],
@@ -14260,7 +14236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "d46b9817-87ac-4af0-b387-b10c9a4998f4",
    "metadata": {},
    "outputs": [],
@@ -14275,7 +14251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "fa8b147f-39c8-4eb7-bb95-93dd8e4cb1cf",
    "metadata": {},
    "outputs": [],
@@ -14301,7 +14277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "c6f5bb17-8c3c-4dcd-952d-caa1d7c4c4fa",
    "metadata": {},
    "outputs": [
@@ -14380,7 +14356,8 @@
       "Epoch 68, Validation Loss: 0.02\n",
       "Early stopping at epoch 68\n",
       "Best model loaded.\n",
-      "Training complete.\n"
+      "Training complete.\n",
+      "The training time is 104.35 sec.\n"
      ]
     }
    ],
@@ -14399,7 +14376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "6584d57e-6b4c-4262-82f5-55735ef17cac",
    "metadata": {},
    "outputs": [
@@ -14407,29 +14384,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:06<00:00, 157.97it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████| 100/100 [00:00<00:00, 153.65it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  1000.000000       1000.000000   1000.000000\n",
-      "mean     -0.004955          0.000231      0.003131\n",
-      "std       0.055064          0.004786      0.001682\n",
-      "min      -0.083935          0.000000      0.001000\n",
-      "25%      -0.041584          0.000000      0.002057\n",
-      "50%      -0.021474          0.000000      0.002556\n",
-      "75%       0.014630          0.000000      0.003308\n",
-      "max       0.281345          0.132805      0.013741\n",
-      "Number of infeasible solution: 4\n"
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000             100.0    100.000000\n",
+      "mean    -0.000194               0.0      0.003053\n",
+      "std      0.056646               0.0      0.000960\n",
+      "min     -0.061378               0.0      0.001996\n",
+      "25%     -0.038801               0.0      0.002506\n",
+      "50%     -0.018060               0.0      0.002998\n",
+      "75%      0.015285               0.0      0.003530\n",
+      "max      0.192843               0.0      0.006510\n",
+      "Number of infeasible solution: 0\n"
      ]
     }
    ],
    "source": [
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
-    "for b in tqdm(data_test.datadict[\"b\"]):\n",
+    "for b in tqdm(data_test.datadict[\"b\"][:100]):\n",
     "    # data point as tensor\n",
     "    datapoints = {\"b\": torch.unsqueeze(b, 0).to(\"cuda\"), \n",
     "                  \"name\": \"test\"}\n",
@@ -14461,35 +14438,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "052ea195-00e1-481a-ad51-8a9776f33a03",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "          Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  100.000000             100.0    100.000000\n",
-      "mean    -0.000194               0.0      0.003455\n",
-      "std      0.056646               0.0      0.001583\n",
-      "min     -0.061378               0.0      0.001295\n",
-      "25%     -0.038801               0.0      0.002286\n",
-      "50%     -0.018060               0.0      0.003009\n",
-      "75%      0.015285               0.0      0.003966\n",
-      "max      0.192843               0.0      0.007856\n",
-      "Number of infeasible solution: 0\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = pd.read_csv(\"result/nc_lt_20-20.csv\", index_col=0).iloc[:100]\n",
-    "print(df.describe())\n",
-    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)+df[\"Sol\"].isna().sum()))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "ce0d30ba-7cf7-4ca9-974d-91bdd03cf337",
    "metadata": {},
@@ -14499,7 +14447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "id": "9ecfa0a5-6d83-4be1-affc-7fbc0f51b023",
    "metadata": {},
    "outputs": [],
@@ -14512,7 +14460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "id": "2873d78f-da34-4516-92a8-e0772aa78e4a",
    "metadata": {},
    "outputs": [],
@@ -14526,7 +14474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "id": "4c574a6d-0c51-41b5-a1f6-a8c4a4ec7447",
    "metadata": {},
    "outputs": [],
@@ -14547,7 +14495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "id": "8f3b086b-2583-4ceb-93d0-aa21b501d107",
    "metadata": {},
    "outputs": [
@@ -14681,7 +14629,7 @@
       "Early stopping at epoch 122\n",
       "Best model loaded.\n",
       "Training complete.\n",
-      "The training time is 71.25 sec.\n"
+      "The training time is 79.28 sec.\n"
      ]
     }
    ],
@@ -14700,7 +14648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "id": "22c7cb8b-55ba-433f-87b2-fe73f0379b62",
    "metadata": {},
    "outputs": [
@@ -14708,30 +14656,30 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:04<00:00, 219.78it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████| 100/100 [00:00<00:00, 177.15it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  1000.000000       1000.000000   1000.000000\n",
-      "mean      5.129484          0.038998      0.000577\n",
-      "std       0.413888          0.063282      0.000521\n",
-      "min       3.923540          0.000000      0.000000\n",
-      "25%       4.834721          0.000000      0.000000\n",
-      "50%       5.111493          0.000000      0.000999\n",
-      "75%       5.391745          0.061435      0.001000\n",
-      "max       6.796535          0.380077      0.002005\n",
-      "Number of infeasible solution: 465\n"
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000        100.000000    100.000000\n",
+      "mean     5.157895          0.042595      0.000922\n",
+      "std      0.433152          0.066922      0.000556\n",
+      "min      4.071636          0.000000      0.000000\n",
+      "25%      4.906361          0.000000      0.000997\n",
+      "50%      5.123234          0.005193      0.001000\n",
+      "75%      5.330060          0.059425      0.001002\n",
+      "max      6.796535          0.337029      0.002515\n",
+      "Number of infeasible solution: 52\n"
      ]
     }
    ],
    "source": [
     "from src.heuristic import naive_round\n",
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
-    "for b in tqdm(data_test.datadict[\"b\"]):\n",
+    "for b in tqdm(data_test.datadict[\"b\"][:100]):\n",
     "    # data point as tensor\n",
     "    datapoints = {\"b\": torch.unsqueeze(b, 0).to(\"cuda\"), \n",
     "                  \"name\": \"test\"}\n",
@@ -14761,35 +14709,6 @@
     "print(df.describe())\n",
     "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
     "df.to_csv(\"result/nc_pr_20-20.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "dd36c1c3-5f9d-4dfc-9f43-601976dc29f1",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "          Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  100.000000        100.000000    100.000000\n",
-      "mean     5.157895          0.042595      0.000598\n",
-      "std      0.433152          0.066922      0.000519\n",
-      "min      4.071636          0.000000      0.000000\n",
-      "25%      4.906361          0.000000      0.000000\n",
-      "50%      5.123234          0.005193      0.000998\n",
-      "75%      5.330060          0.059425      0.001000\n",
-      "max      6.796535          0.337029      0.002005\n",
-      "Number of infeasible solution: 52\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = pd.read_csv(\"result/nc_pr_20-20.csv\", index_col=0).iloc[:100]\n",
-    "print(df.describe())\n",
-    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))"
    ]
   },
   {
