--- a/test/nonconvex/Test Nonconvex 200-200.ipynb
+++ b/test/nonconvex/Test Nonconvex 200-200.ipynb
@@ -252,7 +252,8 @@
       "Epoch 71, Validation Loss: 2.24\n",
       "Early stopping at epoch 71\n",
       "Best model loaded.\n",
-      "Training complete.\n"
+      "Training complete.\n",
+      "The training time is 104.05 sec.\n"
      ]
     }
    ],
@@ -279,29 +280,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [02:07<00:00,  7.87it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [00:13<00:00,  7.18it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  1000.000000            1000.0   1000.000000\n",
-      "mean      1.688222               0.0      0.004466\n",
-      "std       0.002877               0.0      0.002850\n",
-      "min       1.659201               0.0      0.001999\n",
-      "25%       1.688158               0.0      0.003052\n",
-      "50%       1.688158               0.0      0.003609\n",
-      "75%       1.688158               0.0      0.004612\n",
-      "max       1.774068               0.0      0.035404\n",
+      "            Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  1.000000e+02             100.0    100.000000\n",
+      "mean   1.688158e+00               0.0      0.003859\n",
+      "std    1.785306e-15               0.0      0.000890\n",
+      "min    1.688158e+00               0.0      0.002501\n",
+      "25%    1.688158e+00               0.0      0.003006\n",
+      "50%    1.688158e+00               0.0      0.003654\n",
+      "75%    1.688158e+00               0.0      0.004514\n",
+      "max    1.688158e+00               0.0      0.006001\n",
       "Number of infeasible solution: 0\n"
      ]
     }
    ],
    "source": [
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
-    "for b in tqdm(data_test.datadict[\"b\"]):\n",
+    "for b in tqdm(data_test.datadict[\"b\"][:100]):\n",
     "    # data point as tensor\n",
     "    datapoints = {\"b\": torch.unsqueeze(b, 0).to(\"cuda\"), \n",
     "                  \"name\": \"test\"}\n",
@@ -466,7 +467,8 @@
       "Epoch 59, Validation Loss: 0.85\n",
       "Early stopping at epoch 59\n",
       "Best model loaded.\n",
-      "Training complete.\n"
+      "Training complete.\n",
+      "The training time is 89.24 sec.\n"
      ]
     }
    ],
@@ -493,29 +495,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [02:07<00:00,  7.84it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [00:10<00:00,  9.35it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  1000.000000       1000.000000   1000.000000\n",
-      "mean      0.496345          0.002339      0.004636\n",
-      "std       0.165948          0.027040      0.002798\n",
-      "min       0.313944          0.000000      0.001523\n",
-      "25%       0.427910          0.000000      0.003104\n",
-      "50%       0.463699          0.000000      0.003819\n",
-      "75%       0.517549          0.000000      0.005002\n",
-      "max       2.401708          0.619919      0.033463\n",
-      "Number of infeasible solution: 18\n"
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000        100.000000    100.000000\n",
+      "mean     0.514225          0.000066      0.003275\n",
+      "std      0.174481          0.000658      0.000786\n",
+      "min      0.331343          0.000000      0.001998\n",
+      "25%      0.439910          0.000000      0.002790\n",
+      "50%      0.464498          0.000000      0.003013\n",
+      "75%      0.531973          0.000000      0.003548\n",
+      "max      1.430887          0.006576      0.005945\n",
+      "Number of infeasible solution: 1\n"
      ]
     }
    ],
    "source": [
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
-    "for b in tqdm(data_test.datadict[\"b\"]):\n",
+    "for b in tqdm(data_test.datadict[\"b\"][:100]):\n",
     "    # data point as tensor\n",
     "    datapoints = {\"b\": torch.unsqueeze(b, 0).to(\"cuda\"), \n",
     "                  \"name\": \"test\"}\n",
@@ -556,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "382a0a8a-d846-4182-ab69-7d618edea9cf",
    "metadata": {},
    "outputs": [],
@@ -569,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "id": "c9493b63-6636-4f3e-aff0-9c16eaebf4e0",
    "metadata": {},
    "outputs": [],
@@ -583,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "id": "8eabc216-f067-4d6e-842f-a5d3534c8f70",
    "metadata": {},
    "outputs": [],
@@ -604,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "83bc382f-8107-4e74-b675-3a1a1932e3b2",
    "metadata": {},
    "outputs": [
@@ -750,7 +752,7 @@
       "Early stopping at epoch 134\n",
       "Best model loaded.\n",
       "Training complete.\n",
-      "The training time is 90.48 sec.\n"
+      "The training time is 84.28 sec.\n"
      ]
     }
    ],
@@ -769,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "id": "f1a05c45-1a9c-4c75-a385-6d4b8c643f78",
    "metadata": {},
    "outputs": [
@@ -777,7 +779,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [02:05<00:00,  7.97it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [00:17<00:00,  5.86it/s]\n"
      ]
     },
     {
@@ -785,22 +787,22 @@
      "output_type": "stream",
      "text": [
       "            Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  1.000000e+03       1000.000000   1000.000000\n",
-      "mean   4.175566e+01          0.535398      0.000910\n",
-      "std    9.597127e-13          0.356764      0.000487\n",
+      "count  1.000000e+02        100.000000    100.000000\n",
+      "mean   4.175566e+01          0.531382      0.000939\n",
+      "std    6.427101e-14          0.338466      0.000517\n",
       "min    4.175566e+01          0.000000      0.000000\n",
-      "25%    4.175566e+01          0.256559      0.000998\n",
-      "50%    4.175566e+01          0.489904      0.001001\n",
-      "75%    4.175566e+01          0.777848      0.001011\n",
-      "max    4.175566e+01          1.723091      0.002529\n",
-      "Number of infeasible solution: 975\n"
+      "25%    4.175566e+01          0.321623      0.000999\n",
+      "50%    4.175566e+01          0.488768      0.001000\n",
+      "75%    4.175566e+01          0.699078      0.001009\n",
+      "max    4.175566e+01          1.399221      0.002338\n",
+      "Number of infeasible solution: 95\n"
      ]
     }
    ],
    "source": [
     "from src.heuristic import naive_round\n",
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
-    "for b in tqdm(data_test.datadict[\"b\"]):\n",
+    "for b in tqdm(data_test.datadict[\"b\"][:100]):\n",
     "    # data point as tensor\n",
     "    datapoints = {\"b\": torch.unsqueeze(b, 0).to(\"cuda\"), \n",
     "                  \"name\": \"test\"}\n",
@@ -830,35 +832,6 @@
     "print(df.describe())\n",
     "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
     "df.to_csv(\"result/nc_pr_200-200.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "5261227b-7a55-4879-9e84-508ddff807df",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "            Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  1.000000e+02        100.000000    100.000000\n",
-      "mean   4.175566e+01          0.531382      0.000974\n",
-      "std    6.427101e-14          0.338466      0.000440\n",
-      "min    4.175566e+01          0.000000      0.000000\n",
-      "25%    4.175566e+01          0.321623      0.000999\n",
-      "50%    4.175566e+01          0.488768      0.001002\n",
-      "75%    4.175566e+01          0.699078      0.001041\n",
-      "max    4.175566e+01          1.399221      0.002002\n",
-      "Number of infeasible solution: 95\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = pd.read_csv(\"result/nc_pr_200-200.csv\", index_col=0).iloc[:100]\n",
-    "print(df.describe())\n",
-    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))"
    ]
   },
   {
