--- a/test/nonconvex/Test Nonconvex 5-5.ipynb
+++ b/test/nonconvex/Test Nonconvex 5-5.ipynb
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "id": "034cffcc-32ee-43b5-ac1a-98338cf6ade5",
    "metadata": {},
    "outputs": [
@@ -177,14 +177,16 @@
       "50%     -0.057967               0.0      0.197883\n",
       "75%      0.024541               0.0      0.248582\n",
       "max      0.603266               0.0      0.688771\n",
-      "Number of infeasible solution: 0\n"
+      "Number of infeasible solution: 0\n",
+      "Number of None values:  0\n"
      ]
     }
    ],
    "source": [
     "df = pd.read_csv(\"result/nc_exact_5-5.csv\", index_col=0).iloc[:100]\n",
     "print(df.describe())\n",
-    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))"
+    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
+    "print(\"Number of None values: \", df[\"Sol\"].isna().sum())"
    ]
   },
   {
@@ -262,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "id": "966535ab-a728-4880-82b1-2bd39ec43982",
    "metadata": {},
    "outputs": [
@@ -279,14 +281,16 @@
       "50%     -0.088553          0.030459      0.695977\n",
       "75%     -0.000265          0.070678      0.804689\n",
       "max      0.489724          0.214372      1.345376\n",
-      "Number of infeasible solution: 63\n"
+      "Number of infeasible solution: 63\n",
+      "Number of None values:  0\n"
      ]
     }
    ],
    "source": [
     "df = pd.read_csv(\"result/nc_heur_rnd_5-5.csv\", index_col=0).iloc[:100]\n",
     "print(df.describe())\n",
-    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))"
+    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
+    "print(\"Number of None values: \", df[\"Sol\"].isna().sum())"
    ]
   },
   {
@@ -361,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "id": "2021f380-fe51-43a8-953a-8d4f9aff42a3",
    "metadata": {},
    "outputs": [
@@ -378,113 +382,16 @@
       "50%      0.286074               0.0      0.077468\n",
       "75%      1.392251               0.0      0.079488\n",
       "max      7.894967               0.0      0.201166\n",
-      "Number of infeasible solution: 0\n"
+      "Number of infeasible solution: 0\n",
+      "Number of None values:  0\n"
      ]
     }
    ],
    "source": [
     "df = pd.read_csv(\"result/nc_heur_n1_5-5.csv\", index_col=0).iloc[:100]\n",
     "print(df.describe())\n",
-    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "316273d7-690a-424a-bab4-6a7638457d87",
-   "metadata": {},
-   "source": [
-    "### Heuristic - N3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "52ce4b8c-8469-4aaa-9346-e650c2e19b81",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_heur = model.first_solution_heuristic(nodes_limit=3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "c06bcc68-76fc-42af-89fc-dff179a85999",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [01:43<00:00,  9.68it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "           Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  1000.000000            1000.0   1000.000000\n",
-      "mean      0.226923               0.0      0.102537\n",
-      "std       0.414379               0.0      0.045570\n",
-      "min      -0.180625               0.0      0.073249\n",
-      "25%      -0.021205               0.0      0.076886\n",
-      "50%       0.069121               0.0      0.078802\n",
-      "75%       0.264289               0.0      0.107023\n",
-      "max       2.196364               0.0      0.342980\n",
-      "Number of infeasible solution: 0\n"
-     ]
-    }
-   ],
-   "source": [
-    "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
-    "for b in tqdm(data_test.datadict[\"b\"]):\n",
-    "    # set params\n",
-    "    model_heur.set_param_val({\"b\":b.cpu().numpy()})\n",
-    "    # solve\n",
-    "    tick = time.time()\n",
-    "    xval, objval = model_heur.solve(\"scip\")\n",
-    "    tock = time.time()\n",
-    "    # eval\n",
-    "    params.append(list(b))\n",
-    "    sols.append(list(list(xval.values())[0].values()))\n",
-    "    objvals.append(objval)\n",
-    "    conviols.append(sum(model_heur.cal_violation()))\n",
-    "    elapseds.append(tock - tick)\n",
-    "df = pd.DataFrame({\"Param\":params, \"Sol\":sols, \"Obj Val\": objvals, \"Constraints Viol\": conviols, \"Elapsed Time\": elapseds})\n",
-    "time.sleep(1)\n",
-    "print(df.describe())\n",
     "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
-    "df.to_csv(\"result/nc_heur_n3_5-5.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "ac883694-199d-46d0-8399-b4b38d9322b0",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "          Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  100.000000             100.0    100.000000\n",
-      "mean     0.246609               0.0      0.108615\n",
-      "std      0.424883               0.0      0.045924\n",
-      "min     -0.121979               0.0      0.073827\n",
-      "25%     -0.008328               0.0      0.076654\n",
-      "50%      0.066949               0.0      0.092300\n",
-      "75%      0.303705               0.0      0.121741\n",
-      "max      1.824793               0.0      0.278252\n",
-      "Number of infeasible solution: 0\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = pd.read_csv(\"result/nc_heur_n3_5-5.csv\", index_col=0).iloc[:100]\n",
-    "print(df.describe())\n",
-    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))"
+    "print(\"Number of None values: \", df[\"Sol\"].isna().sum())"
    ]
   },
   {
@@ -497,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "id": "6a4fb3e2-9c47-4c10-8116-e94be18ea59c",
    "metadata": {},
    "outputs": [],
@@ -510,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "id": "536d2d58-67ba-408a-b72a-7c5bd54a5ff4",
    "metadata": {},
    "outputs": [],
@@ -525,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "id": "fee1241e-e53a-4cbb-927a-edcdb3537303",
    "metadata": {},
    "outputs": [],
@@ -551,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "id": "e4f10263-5f69-4288-a4e8-8be83929c8d6",
    "metadata": {},
    "outputs": [
@@ -728,7 +635,8 @@
       "Epoch 166, Validation Loss: 0.25\n",
       "Early stopping at epoch 166\n",
       "Best model loaded.\n",
-      "Training complete.\n"
+      "Training complete.\n",
+      "The training time is 257.28 sec.\n"
      ]
     }
    ],
@@ -747,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "3e835084-eb75-45d9-bcbd-5fb4c613fb41",
    "metadata": {},
    "outputs": [
@@ -755,29 +663,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:04<00:00, 247.55it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████| 100/100 [00:00<00:00, 291.11it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  1000.000000       1000.000000   1000.000000\n",
-      "mean      0.202430          0.000038      0.002979\n",
-      "std       0.196878          0.000889      0.001608\n",
-      "min      -0.042898          0.000000      0.000999\n",
-      "25%       0.041265          0.000000      0.002005\n",
-      "50%       0.163571          0.000000      0.002512\n",
-      "75%       0.278137          0.000000      0.003121\n",
-      "max       1.064301          0.025181      0.014828\n",
-      "Number of infeasible solution: 2\n"
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000             100.0    100.000000\n",
+      "mean     0.201659               0.0      0.002380\n",
+      "std      0.214481               0.0      0.000776\n",
+      "min     -0.028597               0.0      0.001193\n",
+      "25%      0.035496               0.0      0.002000\n",
+      "50%      0.163432               0.0      0.002066\n",
+      "75%      0.260766               0.0      0.002606\n",
+      "max      1.064301               0.0      0.007729\n",
+      "Number of infeasible solution: 0\n"
      ]
     }
    ],
    "source": [
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
-    "for b in tqdm(data_test.datadict[\"b\"]):\n",
+    "for b in tqdm(data_test.datadict[\"b\"][:100]):\n",
     "    # data point as tensor\n",
     "    datapoints = {\"b\": torch.unsqueeze(b, 0).to(\"cuda\"), \n",
     "                  \"name\": \"test\"}\n",
@@ -809,35 +717,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "ebb13c05-3faf-40f6-a56e-942b0cc8897a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "          Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  100.000000             100.0    100.000000\n",
-      "mean     0.201659               0.0      0.004224\n",
-      "std      0.214481               0.0      0.001896\n",
-      "min     -0.028597               0.0      0.001607\n",
-      "25%      0.035496               0.0      0.002512\n",
-      "50%      0.163432               0.0      0.003993\n",
-      "75%      0.260766               0.0      0.005685\n",
-      "max      1.064301               0.0      0.009392\n",
-      "Number of infeasible solution: 0\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = pd.read_csv(\"result/nc_lr_5-5.csv\", index_col=0).iloc[:100]\n",
-    "print(df.describe())\n",
-    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "2dbf8a72-29b9-49c4-b3c1-0d68895c1c1f",
    "metadata": {},
@@ -847,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "id": "36c57dbb-8dee-4976-8922-82a155fe0128",
    "metadata": {},
    "outputs": [],
@@ -860,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "id": "d46b9817-87ac-4af0-b387-b10c9a4998f4",
    "metadata": {},
    "outputs": [],
@@ -875,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "id": "fa8b147f-39c8-4eb7-bb95-93dd8e4cb1cf",
    "metadata": {},
    "outputs": [],
@@ -901,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "id": "c6f5bb17-8c3c-4dcd-952d-caa1d7c4c4fa",
    "metadata": {},
    "outputs": [
@@ -1062,7 +941,8 @@
       "Epoch 150, Validation Loss: 0.23\n",
       "Early stopping at epoch 150\n",
       "Best model loaded.\n",
-      "Training complete.\n"
+      "Training complete.\n",
+      "The training time is 226.09 sec.\n"
      ]
     }
    ],
@@ -1081,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "id": "6584d57e-6b4c-4262-82f5-55735ef17cac",
    "metadata": {},
    "outputs": [
@@ -1089,29 +969,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:03<00:00, 264.66it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████| 100/100 [00:00<00:00, 243.91it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  1000.000000       1000.000000   1000.000000\n",
-      "mean      0.215118          0.000171      0.002860\n",
-      "std       0.173971          0.002777      0.001468\n",
-      "min       0.091262          0.000000      0.000999\n",
-      "25%       0.100285          0.000000      0.002001\n",
-      "50%       0.131750          0.000000      0.002510\n",
-      "75%       0.275424          0.000000      0.003034\n",
-      "max       1.052636          0.075770      0.014105\n",
-      "Number of infeasible solution: 6\n"
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000             100.0    100.000000\n",
+      "mean     0.210790               0.0      0.002963\n",
+      "std      0.178831               0.0      0.001123\n",
+      "min      0.091262               0.0      0.001001\n",
+      "25%      0.100285               0.0      0.002009\n",
+      "50%      0.142652               0.0      0.002834\n",
+      "75%      0.267049               0.0      0.003517\n",
+      "max      0.983486               0.0      0.005883\n",
+      "Number of infeasible solution: 0\n"
      ]
     }
    ],
    "source": [
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
-    "for b in tqdm(data_test.datadict[\"b\"]):\n",
+    "for b in tqdm(data_test.datadict[\"b\"][:100]):\n",
     "    # data point as tensor\n",
     "    datapoints = {\"b\": torch.unsqueeze(b, 0).to(\"cuda\"), \n",
     "                  \"name\": \"test\"}\n",
@@ -1143,35 +1023,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "13a1ab04-260e-4d61-8b73-2793b1ad6a3c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "          Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  100.000000             100.0    100.000000\n",
-      "mean     0.210790               0.0      0.003017\n",
-      "std      0.178831               0.0      0.001600\n",
-      "min      0.091262               0.0      0.001000\n",
-      "25%      0.100285               0.0      0.002004\n",
-      "50%      0.142652               0.0      0.002522\n",
-      "75%      0.267049               0.0      0.003130\n",
-      "max      0.983486               0.0      0.008379\n",
-      "Number of infeasible solution: 0\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = pd.read_csv(\"result/nc_lt_5-5.csv\", index_col=0).iloc[:100]\n",
-    "print(df.describe())\n",
-    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "8bf7b325-3c44-431b-8368-37850167e926",
    "metadata": {},
@@ -1181,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "684ef4fb-0cc9-4330-a20e-0f4f85ba5e7e",
    "metadata": {},
    "outputs": [],
@@ -1194,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "id": "8a7be084-b394-470e-92a8-18c5d2f59b2d",
    "metadata": {},
    "outputs": [],
@@ -1208,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "id": "ba17c2fa-bac0-4be9-b96f-7266816c98fa",
    "metadata": {},
    "outputs": [],
@@ -1229,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "1e5464c8-dcb6-4fbd-a1c3-e6cacc625ba0",
    "metadata": {},
    "outputs": [
@@ -1436,7 +1287,7 @@
       "Early stopping at epoch 195\n",
       "Best model loaded.\n",
       "Training complete.\n",
-      "The training time is 119.16 sec.\n"
+      "The training time is 111.07 sec.\n"
      ]
     }
    ],
@@ -1455,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "id": "630afb5d-e139-4a65-9cd9-6a2e13324d16",
    "metadata": {},
    "outputs": [
@@ -1463,30 +1314,30 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:01<00:00, 618.50it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████| 100/100 [00:00<00:00, 504.15it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  1000.000000       1000.000000   1000.000000\n",
-      "mean      0.183618          0.023079      0.000602\n",
-      "std       0.181661          0.030863      0.000546\n",
-      "min      -0.139751          0.000000      0.000000\n",
-      "25%       0.062769          0.000000      0.000000\n",
-      "50%       0.160166          0.008342      0.000999\n",
-      "75%       0.258674          0.038559      0.001000\n",
-      "max       1.064321          0.190021      0.002191\n",
-      "Number of infeasible solution: 573\n"
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000        100.000000    100.000000\n",
+      "mean     0.179251          0.022866      0.000768\n",
+      "std      0.206835          0.032927      0.000520\n",
+      "min     -0.139751          0.000000      0.000000\n",
+      "25%      0.053199          0.000000      0.000000\n",
+      "50%      0.156735          0.006795      0.001001\n",
+      "75%      0.243721          0.035026      0.001011\n",
+      "max      1.064321          0.190021      0.001771\n",
+      "Number of infeasible solution: 58\n"
      ]
     }
    ],
    "source": [
     "from src.heuristic import naive_round\n",
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
-    "for b in tqdm(data_test.datadict[\"b\"]):\n",
+    "for b in tqdm(data_test.datadict[\"b\"][:100]):\n",
     "    # data point as tensor\n",
     "    datapoints = {\"b\": torch.unsqueeze(b, 0).to(\"cuda\"), \n",
     "                  \"name\": \"test\"}\n",
@@ -1520,7 +1371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "id": "4e3e9236-a4c9-4fc7-8300-5db56dbbd409",
    "metadata": {},
    "outputs": [
@@ -1530,13 +1381,13 @@
      "text": [
       "          Obj Val  Constraints Viol  Elapsed Time\n",
       "count  100.000000        100.000000    100.000000\n",
-      "mean     0.179251          0.022866      0.000710\n",
-      "std      0.206835          0.032927      0.000564\n",
+      "mean     0.179251          0.022866      0.000768\n",
+      "std      0.206835          0.032927      0.000520\n",
       "min     -0.139751          0.000000      0.000000\n",
       "25%      0.053199          0.000000      0.000000\n",
-      "50%      0.156735          0.006795      0.001000\n",
-      "75%      0.243721          0.035026      0.001009\n",
-      "max      1.064321          0.190021      0.002060\n",
+      "50%      0.156735          0.006795      0.001001\n",
+      "75%      0.243721          0.035026      0.001011\n",
+      "max      1.064321          0.190021      0.001771\n",
       "Number of infeasible solution: 58\n"
      ]
     }
