--- a/test/nonconvex/Test Nonconvex 500-500.ipynb
+++ b/test/nonconvex/Test Nonconvex 500-500.ipynb
@@ -240,7 +240,8 @@
       "Epoch 59, Validation Loss: 5.63\n",
       "Early stopping at epoch 59\n",
       "Best model loaded.\n",
-      "Training complete.\n"
+      "Training complete.\n",
+      "The training time is 116.01 sec.\n"
      ]
     }
    ],
@@ -267,29 +268,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [11:19<00:00,  1.47it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [00:58<00:00,  1.70it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  1000.000000       1000.000000   1000.000000\n",
-      "mean     -0.709213          0.003185      0.010006\n",
-      "std       0.111958          0.025379      0.020855\n",
-      "min      -1.029298          0.000000      0.002000\n",
-      "25%      -0.749796          0.000000      0.003684\n",
-      "50%      -0.708204          0.000000      0.004529\n",
-      "75%      -0.653700          0.000000      0.007482\n",
-      "max       0.370585          0.314706      0.222358\n",
-      "Number of infeasible solution: 23\n"
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000        100.000000    100.000000\n",
+      "mean    -0.716107          0.006552      0.006133\n",
+      "std      0.111679          0.039169      0.000881\n",
+      "min     -0.991856          0.000000      0.003006\n",
+      "25%     -0.759862          0.000000      0.005999\n",
+      "50%     -0.716757          0.000000      0.006210\n",
+      "75%     -0.653464          0.000000      0.006543\n",
+      "max     -0.380822          0.314706      0.008294\n",
+      "Number of infeasible solution: 4\n"
      ]
     }
    ],
    "source": [
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
-    "for b in tqdm(data_test.datadict[\"b\"]):\n",
+    "for b in tqdm(data_test.datadict[\"b\"][:100]):\n",
     "    # data point as tensor\n",
     "    datapoints = {\"b\": torch.unsqueeze(b, 0).to(\"cuda\"), \n",
     "                  \"name\": \"test\"}\n",
@@ -499,7 +500,8 @@
       "Epoch 104, Validation Loss: 0.21\n",
       "Early stopping at epoch 104\n",
       "Best model loaded.\n",
-      "Training complete.\n"
+      "Training complete.\n",
+      "The training time is 230.52 sec.\n"
      ]
     }
    ],
@@ -526,29 +528,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [11:17<00:00,  1.48it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [01:16<00:00,  1.31it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  1000.000000       1000.000000   1000.000000\n",
-      "mean     -1.637065          0.000588      0.010730\n",
-      "std       0.077686          0.010223      0.023958\n",
-      "min      -1.685198          0.000000      0.002048\n",
-      "25%      -1.656603          0.000000      0.003835\n",
-      "50%      -1.656603          0.000000      0.004636\n",
-      "75%      -1.655448          0.000000      0.007369\n",
-      "max      -0.782845          0.248091      0.273246\n",
-      "Number of infeasible solution: 5\n"
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000             100.0    100.000000\n",
+      "mean    -1.646320               0.0      0.006785\n",
+      "std      0.031313               0.0      0.001193\n",
+      "min     -1.675363               0.0      0.003505\n",
+      "25%     -1.656603               0.0      0.006344\n",
+      "50%     -1.656603               0.0      0.006558\n",
+      "75%     -1.655448               0.0      0.007088\n",
+      "max     -1.455971               0.0      0.010228\n",
+      "Number of infeasible solution: 0\n"
      ]
     }
    ],
    "source": [
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
-    "for b in tqdm(data_test.datadict[\"b\"]):\n",
+    "for b in tqdm(data_test.datadict[\"b\"][:100]):\n",
     "    # data point as tensor\n",
     "    datapoints = {\"b\": torch.unsqueeze(b, 0).to(\"cuda\"), \n",
     "                  \"name\": \"test\"}\n",
@@ -589,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "id": "826c4908-7c1f-4cb9-ae66-36a381aec788",
    "metadata": {},
    "outputs": [],
@@ -602,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "id": "e5f65261-d680-43cc-9305-0e92a8bb3e4e",
    "metadata": {},
    "outputs": [],
@@ -616,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "id": "b4e7f75a-e5d2-4848-a53b-44073a314f5b",
    "metadata": {},
    "outputs": [],
@@ -637,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "id": "0f623256-9593-4b2b-91ed-e6b3bf9d7d46",
    "metadata": {},
    "outputs": [
@@ -834,7 +836,7 @@
       "Early stopping at epoch 185\n",
       "Best model loaded.\n",
       "Training complete.\n",
-      "The training time is 157.35 sec.\n"
+      "The training time is 149.87 sec.\n"
      ]
     }
    ],
@@ -853,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "id": "e153f900-9948-4a6b-9a5c-3c9805fce01c",
    "metadata": {},
    "outputs": [
@@ -861,30 +863,30 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [11:11<00:00,  1.49it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [01:06<00:00,  1.50it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  1000.000000       1000.000000   1000.000000\n",
-      "mean     93.029852          4.366663      0.000845\n",
-      "std       0.002823          1.280261      0.000501\n",
-      "min      93.029763          0.739293      0.000000\n",
-      "25%      93.029763          3.510456      0.000513\n",
-      "50%      93.029763          4.275835      0.001001\n",
-      "75%      93.029763          5.230381      0.001011\n",
-      "max      93.119041          8.286500      0.002445\n",
-      "Number of infeasible solution: 1000\n"
+      "            Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  1.000000e+02        100.000000    100.000000\n",
+      "mean   9.302976e+01          4.344916      0.000933\n",
+      "std    4.284734e-14          1.152884      0.000526\n",
+      "min    9.302976e+01          1.866629      0.000000\n",
+      "25%    9.302976e+01          3.649780      0.000998\n",
+      "50%    9.302976e+01          4.132823      0.001001\n",
+      "75%    9.302976e+01          5.084770      0.001015\n",
+      "max    9.302976e+01          8.286500      0.002511\n",
+      "Number of infeasible solution: 100\n"
      ]
     }
    ],
    "source": [
     "from src.heuristic import naive_round\n",
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
-    "for b in tqdm(data_test.datadict[\"b\"]):\n",
+    "for b in tqdm(data_test.datadict[\"b\"][:100]):\n",
     "    # data point as tensor\n",
     "    datapoints = {\"b\": torch.unsqueeze(b, 0).to(\"cuda\"), \n",
     "                  \"name\": \"test\"}\n",
@@ -914,35 +916,6 @@
     "print(df.describe())\n",
     "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
     "df.to_csv(\"result/nc_pr_500-500.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "da5ecc24-c80b-4e56-a913-16448fd55806",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "            Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  1.000000e+02        100.000000    100.000000\n",
-      "mean   9.302976e+01          4.344916      0.000861\n",
-      "std    5.712979e-14          1.152884      0.000541\n",
-      "min    9.302976e+01          1.866629      0.000000\n",
-      "25%    9.302976e+01          3.649780      0.000506\n",
-      "50%    9.302976e+01          4.132823      0.001002\n",
-      "75%    9.302976e+01          5.084770      0.001020\n",
-      "max    9.302976e+01          8.286500      0.002033\n",
-      "Number of infeasible solution: 100\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = pd.read_csv(\"result/nc_pr_500-500.csv\", index_col=0).iloc[:100]\n",
-    "print(df.describe())\n",
-    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))"
    ]
   },
   {
