--- a/test/quadratic/Test Quadratic 200-200.ipynb
+++ b/test/quadratic/Test Quadratic 200-200.ipynb
@@ -551,7 +551,8 @@
       "Epoch 98, Validation Loss: -30.06\n",
       "Early stopping at epoch 98\n",
       "Best model loaded.\n",
-      "Training complete.\n"
+      "Training complete.\n",
+      "The training time is 149.43 sec.\n"
      ]
     }
    ],
@@ -578,29 +579,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [02:01<00:00,  8.23it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [00:11<00:00,  8.47it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  1000.000000       1000.000000   1000.000000\n",
-      "mean    -31.209237          0.002694      0.004614\n",
-      "std       0.196035          0.017749      0.002903\n",
-      "min     -31.604665          0.000000      0.001510\n",
-      "25%     -31.380844          0.000000      0.003013\n",
-      "50%     -31.245468          0.000000      0.003568\n",
-      "75%     -31.058942          0.000000      0.005091\n",
-      "max     -30.328813          0.216221      0.022337\n",
-      "Number of infeasible solution: 34\n"
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000        100.000000    100.000000\n",
+      "mean   -31.205519          0.003159      0.003309\n",
+      "std      0.182342          0.016189      0.000727\n",
+      "min    -31.543232          0.000000      0.001998\n",
+      "25%    -31.360568          0.000000      0.002999\n",
+      "50%    -31.247028          0.000000      0.003097\n",
+      "75%    -31.061275          0.000000      0.003729\n",
+      "max    -30.772018          0.104523      0.006010\n",
+      "Number of infeasible solution: 5\n"
      ]
     }
    ],
    "source": [
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
-    "for b in tqdm(data_test.datadict[\"b\"]):\n",
+    "for b in tqdm(data_test.datadict[\"b\"][:100]):\n",
     "    # data point as tensor\n",
     "    datapoints = {\"b\": torch.unsqueeze(b, 0).to(\"cuda\"), \n",
     "                  \"name\": \"test\"}\n",
@@ -629,35 +630,6 @@
     "print(df.describe())\n",
     "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
     "df.to_csv(\"result/cq_lr_200-200.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "668a2a48-38e8-4ba7-a149-d7e4c23d8dfb",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "          Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  100.000000        100.000000    100.000000\n",
-      "mean   -31.205519          0.003159      0.004386\n",
-      "std      0.182342          0.016189      0.002362\n",
-      "min    -31.543232          0.000000      0.001999\n",
-      "25%    -31.360568          0.000000      0.003041\n",
-      "50%    -31.247028          0.000000      0.003819\n",
-      "75%    -31.061275          0.000000      0.004726\n",
-      "max    -30.772018          0.104523      0.018421\n",
-      "Number of infeasible solution: 5\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = pd.read_csv(\"result/cq_lr_200-200.csv\", index_col=0).iloc[:100]\n",
-    "print(df.describe())\n",
-    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))"
    ]
   },
   {
@@ -823,7 +795,8 @@
       "Epoch 88, Validation Loss: -28.09\n",
       "Early stopping at epoch 88\n",
       "Best model loaded.\n",
-      "Training complete.\n"
+      "Training complete.\n",
+      "The training time is 139.17 sec.\n"
      ]
     }
    ],
@@ -850,29 +823,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [02:06<00:00,  7.91it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [00:16<00:00,  6.21it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  1000.000000       1000.000000   1000.000000\n",
-      "mean    -31.254160          0.006354      0.004673\n",
-      "std       0.338234          0.043944      0.003048\n",
-      "min     -31.775507          0.000000      0.001505\n",
-      "25%     -31.506309          0.000000      0.003040\n",
-      "50%     -31.313588          0.000000      0.003758\n",
-      "75%     -31.041621          0.000000      0.005000\n",
-      "max     -28.240721          0.584146      0.033856\n",
-      "Number of infeasible solution: 38\n"
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000        100.000000    100.000000\n",
+      "mean   -31.260533          0.003983      0.004180\n",
+      "std      0.319193          0.039827      0.001273\n",
+      "min    -31.760595          0.000000      0.001999\n",
+      "25%    -31.516941          0.000000      0.003450\n",
+      "50%    -31.319818          0.000000      0.004000\n",
+      "75%    -31.048672          0.000000      0.004525\n",
+      "max    -30.137631          0.398268      0.009530\n",
+      "Number of infeasible solution: 1\n"
      ]
     }
    ],
    "source": [
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
-    "for b in tqdm(data_test.datadict[\"b\"]):\n",
+    "for b in tqdm(data_test.datadict[\"b\"][:100]):\n",
     "    # data point as tensor\n",
     "    datapoints = {\"b\": torch.unsqueeze(b, 0).to(\"cuda\"), \n",
     "                  \"name\": \"test\"}\n",
@@ -904,35 +877,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "d16e65ff-2224-4428-8868-d625db48e519",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "          Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  100.000000        100.000000    100.000000\n",
-      "mean   -31.260533          0.003983      0.004528\n",
-      "std      0.319193          0.039827      0.002572\n",
-      "min    -31.760595          0.000000      0.002011\n",
-      "25%    -31.516941          0.000000      0.003405\n",
-      "50%    -31.319818          0.000000      0.004036\n",
-      "75%    -31.048672          0.000000      0.004585\n",
-      "max    -30.137631          0.398268      0.020412\n",
-      "Number of infeasible solution: 1\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = pd.read_csv(\"result/cq_lt_200-200.csv\", index_col=0).iloc[:100]\n",
-    "print(df.describe())\n",
-    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "a75bca80-07e7-43d7-908a-0a049dc231fc",
    "metadata": {},
@@ -942,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "id": "382a0a8a-d846-4182-ab69-7d618edea9cf",
    "metadata": {},
    "outputs": [],
@@ -955,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "id": "b5921542-01cb-4a95-9280-d09427f1870a",
    "metadata": {},
    "outputs": [],
@@ -969,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "id": "f743840a-d9d0-472f-b74a-7a026fff1e75",
    "metadata": {},
    "outputs": [],
@@ -990,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "id": "94010bd1-5d1b-485b-86c7-b90641cbfe99",
    "metadata": {},
    "outputs": [
@@ -1135,7 +1079,8 @@
       "Epoch 134, Validation Loss: -37.07\n",
       "Early stopping at epoch 134\n",
       "Best model loaded.\n",
-      "Training complete.\n"
+      "Training complete.\n",
+      "The training time is 88.49 sec.\n"
      ]
     }
    ],
@@ -1154,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "id": "345cb316-9f5d-494a-9d41-a01711e8d168",
    "metadata": {},
    "outputs": [
@@ -1162,7 +1107,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [02:01<00:00,  8.23it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [00:12<00:00,  8.20it/s]\n"
      ]
     },
     {
@@ -1170,22 +1115,22 @@
      "output_type": "stream",
      "text": [
       "            Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  1.000000e+03       1000.000000   1000.000000\n",
-      "mean  -3.776084e+01          0.535398      0.000840\n",
-      "std    6.753534e-13          0.356764      0.000506\n",
+      "count  1.000000e+02        100.000000    100.000000\n",
+      "mean  -3.776084e+01          0.531382      0.000804\n",
+      "std    4.284734e-14          0.338466      0.000536\n",
       "min   -3.776084e+01          0.000000      0.000000\n",
-      "25%   -3.776084e+01          0.256559      0.000513\n",
-      "50%   -3.776084e+01          0.489904      0.001001\n",
-      "75%   -3.776084e+01          0.777848      0.001010\n",
-      "max   -3.776084e+01          1.723091      0.002929\n",
-      "Number of infeasible solution: 975\n"
+      "25%   -3.776084e+01          0.321623      0.000000\n",
+      "50%   -3.776084e+01          0.488768      0.001004\n",
+      "75%   -3.776084e+01          0.699078      0.001021\n",
+      "max   -3.776084e+01          1.399221      0.002005\n",
+      "Number of infeasible solution: 95\n"
      ]
     }
    ],
    "source": [
     "from src.heuristic import naive_round\n",
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
-    "for b in tqdm(data_test.datadict[\"b\"]):\n",
+    "for b in tqdm(data_test.datadict[\"b\"][:100]):\n",
     "    # data point as tensor\n",
     "    datapoints = {\"b\": torch.unsqueeze(b, 0).to(\"cuda\"), \n",
     "                  \"name\": \"test\"}\n",
@@ -1215,35 +1160,6 @@
     "print(df.describe())\n",
     "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
     "df.to_csv(\"result/cq_pr_200-200.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "7d8b5acf-f3c0-4bea-bb66-83c8a7751b8f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "            Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  1.000000e+02        100.000000    100.000000\n",
-      "mean  -3.776084e+01          0.531382      0.000896\n",
-      "std    4.284734e-14          0.338466      0.000495\n",
-      "min   -3.776084e+01          0.000000      0.000000\n",
-      "25%   -3.776084e+01          0.321623      0.000998\n",
-      "50%   -3.776084e+01          0.488768      0.001002\n",
-      "75%   -3.776084e+01          0.699078      0.001010\n",
-      "max   -3.776084e+01          1.399221      0.002000\n",
-      "Number of infeasible solution: 95\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = pd.read_csv(\"result/cq_pr_200-200.csv\", index_col=0).iloc[:100]\n",
-    "print(df.describe())\n",
-    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))"
    ]
   },
   {
